--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="w3-row w3-container" style="margin:50px 0">
 <div class="w3-half w3-container">
   <div class="w3-topbar w3-border-amber">
-    <img src="img/cellphone.webp" style="width:100%" alt="Téléphone">
+    <img src="img/cellphone.webp" style="width:600" height="400" alt="Téléphone">
     <h2>Smart Vacation</h2>
     <p>Full vacation control from your cell phone.</p>
   </div>
